# toy-acai

./: .clang-format  .env.example  .gitignore
linux/: FindSiv3D.cmake  setup-apptainer.sh  toy-acai.def
linux-cli/: CMakeLists.txt  build-apptainer.sh
linux-python/: CMakeLists.txt  build-apptainer.sh
sim/: README.md  simulate_random.py  slack_uploader.py  train_ppo.py
sim/toy_acai_rl/: __init__.py  env.py  ppo.py
src/: BattlefieldContext.cpp  BattlefieldContext.h  BattlefieldParameters.h  BattlefieldRenderer.cpp  BattlefieldRenderer.h  LivePPAddon.cpp  LivePPAddon.h  Main.cpp  PythonBindings.cpp
tests/: test_terminal_score.py
windows-gui/: .gitignore  toy-acai.sln  toy-acai.vcxproj
windows-gui/App/: .gitignore
